# CrewAI-Ai-Agents-OpenSource

./: README.md
trip_planner/: .env-example  README.md  pyproject.toml  trip_agents.py
