[tool.poetry]
name = "trip-planner-crew"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "trip_planner"}]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.11.0"
unstructured = "==0.10.25"
pyowm = "3.3.0"
tools = "^0.1.9"
python-dotenv = "1.0.0"
langchain = "^0.1.0"
langchain-community = "^0.0.13"
langchain-core = "^0.1.10"
setuptools = "^69.0.3"
wheel = "^0.42.0"
groq = "^0.4.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"